name:                libp2p
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/libp2p#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Libp2p.Class
                     , Network.Libp2p.Data
                     , Network.Libp2p.MultistreamSelector
                     , Network.Libp2p.Connection.Class
                     , Network.Libp2p.Connection.Local
                     , Network.Libp2p.Connection.MessageToStream
                     , Data.Bytes.Varint
  build-depends:       base >= 4.7 && < 5.0
                     , bytestring == 0.10.*
                     , containers == 0.5.*
                     , multipath
  default-language:    Haskell2010

test-suite libp2p-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec == 2.4.*
                     , utf8-string == 1.0.*
                     , bytestring == 0.10.*
                     , containers == 0.5.*
                     , multipath
                     , libp2p
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/libp2p
